--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.8.1",
     "@react-navigation/drawer": "^7.7.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@react-navigation/stack": "^7.6.3",
     "expo": "~54.0.22",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
